# baxter-demo_pkg

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: accelerometer_listener.py  get_joint_pos.py  gripper_demo.py  head_demo.py  ir_sensor_listener.py  irsensor_listener.py  joint_demo.py  lights_talker.py  smile_and_wave.py  sonar_sensor_listener.py
scripts/demos/: acc_demo.py  camera_demo.py  gripper_demo.py  head_demo.py  ik_demo  ik_demo.py  infrared_demo.py  joint_demo.py  lights_demo.py  screen_demo.py  sonar_demo.py
scripts/tests/: add_two_ints_client.py  add_two_ints_server.py  first_publish_node.py  first_subscriber_node.py
src/: __init__.py  sonar_io.py
src/demo_pkg/: __init__.py  accelerometer_io.py  sonar_io.py  sonar_lights_io.py
