<?xml version="1.0"?>
<package format="2">
  <name>demo_pkg</name>
  <version>0.0.0</version>
  <description>
    Demonstration Package for the purposes as described for Spring 2025 Baxter Project
  </description>
  <maintainer email="crblondell@students.nic.edu">Caleb Blondell</maintainer>
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/demo_pkg</url> -->

  <author email="crblondell@students.nic.edu">Caleb Blondell</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>baxter_interface</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
